fixed alignment on footer

--- a/client/src/components/parts/footer.css
+++ b/client/src/components/parts/footer.css
@@ -1,7 +1,7 @@
 .footer{
     background-color: #f4e9e0;
     color: black;
-    height: 200px;
+    height: 220px;
     padding-top: 10px;
     display: flex;
     justify-content: center;
